# django-datatable-view-adv-query

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: main.yml
datatableview_advanced_search/: __init__.py  datatables.py  forms.py  lexer.py  models.py  parser.py  urls.py  utils.py  views.py
datatableview_advanced_search/static/css/: datatables_advanced_search.css  datatableview_advanced_search.css  datatableview_advanced_search.min.css
datatableview_advanced_search/static/js/: datatableview_advanced_search.js  datatableview_advanced_search.min.js
datatableview_advanced_search/tests/: context.py  test_basic.py  test_models.py
demo_app/: manage.py
demo_app/demo_app/: settings.py  urls.py
docs/: conf.py  index.rst
tests/: context.py  test_basic.py
